--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -3,26 +3,30 @@
     <svg-icon key="sun" size="lg"></svg-icon>
     <svg-icon key="cloud" fontSize="40px"></svg-icon>
   </div>
-  <zivv-dropdown class="search__dropdown"></zivv-dropdown>
-  <zivv-typeahead class="search__typeahead"></zivv-typeahead>
+  <div class="search__weather-data">
+    <zivv-dropdown class="search__dropdown"></zivv-dropdown>
+    <zivv-typeahead class="search__typeahead"></zivv-typeahead>
+  </div>
 </section>
 
-<section class="result">
-  <article class="weather">
-    <h1 class="weather__name">May 4 - 10 2020</h1>
-    <p class="weather__value weather__value--large">
-      <span>10</span>
-      <i class="weather__unit">&#8451;</i>
-    </p>
-  </article>
-</section>
+<main>
+  <section class="result">
+    <article class="weather">
+      <h1 class="weather__name">May 4 - 10 2020</h1>
+      <p class="weather__value weather__value--large">
+        <span>10</span>
+        <i class="weather__unit">&#8451;</i>
+      </p>
+    </article>
+  </section>
 
-<section class="days">
-  <article *ngFor="let day of days" class="weather">
-    <h3 class="weather__name">{{ day.name }}</h3>
-    <p class="weather__value">
-      <span>{{ day.value }}</span>
-      <i class="weather__unit">&#8451;</i>
-    </p>
-  </article>
-</section>
+  <section class="days">
+    <article *ngFor="let day of days; let i = index" class="weather" id="weather{{ i + 1 }}">
+      <h3 class="weather__name">{{ day.name }}</h3>
+      <p class="weather__value">
+        <span>{{ day.value }}</span>
+        <i class="weather__unit">&#8451;</i>
+      </p>
+    </article>
+  </section>
+</main>
