--- a/src/app/app.component.scss
+++ b/src/app/app.component.scss
@@ -3,21 +3,31 @@
 :host {
   @include flex(column, center, center, 1 0 auto);
   height: 100%;
+  max-width: 680px;
+  margin: 0 auto;
+  padding: $spacing-5x;
 }
 
 .search {
-  @include flex($align: center);
+  @include flex(row, center, center);
   @include border-radius(large);
-  height: 92px;
-  width: 632px;
+  @include media(sm, max) {
+    flex-direction: column;
+  }
+  width: 100%;
   padding: $spacing-5x;
   background: linear-gradient(0deg, rgba(color(secondary), 0.9), rgba(color(secondary), 0.9)), color(background);
   box-shadow: $box-shadow-base;
 }
 
 .search__weather-image {
+  @include media(sm, max) {
+    margin-bottom: $spacing-2x;
+    margin-right: $spacing-2x;
+  }
   position: relative;
-  margin: 0 $spacing-2x;
+  margin-right: $spacing-4x;
+  margin-left: $spacing-2x;
 
   & > svg-icon[key='sun'] {
     position: absolute;
@@ -26,13 +36,18 @@
   }
 }
 
+.search__weather-data {
+  @include flex();
+  width: 100%;
+}
+
 .search__dropdown {
   max-width: 100px;
-  margin: 0 $spacing-2x;
+  margin-right: $spacing-2x;
 }
 
 .search__typeahead {
-  flex: 1 0 auto;
+  flex: 1 0 0;
 }
 
 .result {
@@ -40,12 +55,53 @@
 }
 
 .days {
-  @include flex();
+  @include flex($justify: space-between);
+  @include media(sm, max) {
+    display: grid;
+    grid-template-columns: repeat(12, 1fr);
+  }
+  @include media(xs, max) {
+    grid-template-columns: repeat(2, 1fr);
+  }
+  width: 100%;
 }
 
 .weather {
   @include flex(column, $align: center);
-  margin: $spacing-4x;
+  // NOTE: Don't go for the 'mobile-first' approach if you don't have the mobile design
+  @include media(sm, max) {
+    $days-in-week: 7;
+
+    @for $i from 1 through $days-in-week {
+      $end: $i * 3 + 1;
+      $start: $end - 3;
+
+      @if $i > 4 {
+        $end: $i * 4 - 15;
+        $start: $end - 4;
+      }
+
+      &#weather#{$i} {
+        grid-column: #{$start} / #{$end};
+      }
+    }
+  }
+  @include media(xs, max) {
+    &:nth-of-type(odd) {
+      grid-column: 1 / 2 !important;
+    }
+
+    &:nth-of-type(even) {
+      grid-column: 2 / 3 !important;
+    }
+
+    &:not(:only-child):last-of-type {
+      grid-column: 1 / 3 !important;
+      padding-bottom: 40px;
+    }
+  }
+
+  margin: $spacing-4x $spacing-1x;
 }
 
 .weather__name {
