--- a/src/app/components/dropdown/dropdown.component.scss
+++ b/src/app/components/dropdown/dropdown.component.scss
@@ -5,7 +5,7 @@
   @include border();
   @include flex($align: center, $gsb: 1 0 auto);
   @include transition(border-color);
-  padding: $spacing-2x $spacing-4x;
+  position: relative;
   height: 48px;
   min-height: 48px;
 
@@ -16,10 +16,59 @@
 }
 
 .dropdown__icon {
-  margin-left: $spacing-2x;
+  position: absolute;
+  right: $spacing-4x;
   opacity: 0.5;
 }
 
-.dropdown__result {
+.options {
+  @include border-radius();
+  @include flex(column, center, center);
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  max-height: 200px;
+  background-color: white;
+  box-shadow: $box-shadow-base;
+  overflow-y: auto;
+  z-index: 1;
+
+  /* Hide scrollbar for IE, Edge and Firefox */
+  -ms-overflow-style: none;
+  scrollbar-width: none;
+
+  /* Hide scrollbar for Chrome, Safari and Opera */
+  &::-webkit-scrollbar {
+    display: none;
+  }
+}
+
+.option {
+  @include border($position: bottom);
+  @include flex($align: center);
+  @include transition(background-color);
+  width: 100%;
+
+  &:not(:only-of-type):hover {
+    background-color: color(background);
+  }
+
+  &:last-of-type {
+    border-bottom: none;
+  }
+}
+
+.option--selected {
+  padding-right: $spacing-4x;
+
+  & > .option__label {
+    flex: 1 0 100%;
+    padding: 0 $spacing-4x;
+  }
+}
+
+.option__label {
+  @include font();
   @include truncate();
 }
