--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -4,7 +4,12 @@
     <svg-icon key="cloud" fontSize="40px"></svg-icon>
   </div>
   <div class="search__weather-data">
-    <zivv-dropdown class="search__dropdown"></zivv-dropdown>
+    <zivv-dropdown
+      [options]="countries$ | async"
+      [optionTemplate]="countryTemplate"
+      class="search__dropdown"
+    ></zivv-dropdown>
+
     <zivv-typeahead class="search__typeahead"></zivv-typeahead>
   </div>
 </section>
@@ -30,3 +35,10 @@
     </article>
   </section>
 </main>
+
+<ng-template #countryTemplate let-context>
+  <article class="country">
+    <img *ngIf="context?.flag" [src]="context.flag" [alt]="context.code" class="country__flag" />
+    <span class="country__code">{{ context?.code || '--' }}</span>
+  </article>
+</ng-template>
