--- a/src/app/components/dropdown/dropdown.component.html
+++ b/src/app/components/dropdown/dropdown.component.html
@@ -1,4 +1,4 @@
-<article (click)="toggleOpen()" (zivvOutsideClick)="toggleOpen(false)" class="dropdown">
+<article (click)="toggleOpen(!isOpen)" (zivvOutsideClick)="toggleOpen(false)" class="dropdown">
   <div class="option option--selected">
     <ng-container
       *ngTemplateOutlet="optionTemplate ? optionTemplate : defaultTemplate; context: { $implicit: selectedOption }"
