--- a/src/app/components/dropdown/dropdown.component.html
+++ b/src/app/components/dropdown/dropdown.component.html
@@ -1,21 +1,12 @@
-<article (click)="toggleOpen(!isOpen)" (zivvOutsideClick)="toggleOpen(false)" class="dropdown">
-  <div class="option option--selected">
-    <ng-container
-      *ngTemplateOutlet="optionTemplate ? optionTemplate : defaultTemplate; context: { $implicit: selectedOption }"
-    ></ng-container>
+<!-- Using Angular's CDK Virtual Scroll for large arrays -->
+<cdk-virtual-scroll-viewport
+  [itemSize]="rowHeight"
+  [minBufferPx]="maxHeight"
+  [maxBufferPx]="maxHeight * 3"
+  [style.height]="items?.length | fn: calculateHeight:this"
+  class="items"
+>
+  <div *cdkVirtualFor="let item of items" (click)="itemSelect.emit(item)" class="item">
+    <ng-container *ngTemplateOutlet="itemTemplate; context: { $implicit: item }"></ng-container>
   </div>
-
-  <section *ngIf="isOpen" class="options">
-    <div *ngFor="let option of options; trackBy: trackByOption" (click)="onSelect(option)" class="option">
-      <ng-container
-        *ngTemplateOutlet="optionTemplate ? optionTemplate : defaultTemplate; context: { $implicit: option }"
-      ></ng-container>
-    </div>
-  </section>
-
-  <svg-icon key="chevron" size="xs" class="dropdown__icon"></svg-icon>
-</article>
-
-<ng-template #defaultTemplate let-context>
-  <span class="option__label">{{ hasKey ? context[labelKey] : context }}</span>
-</ng-template>
+</cdk-virtual-scroll-viewport>
