--- a/src/app/components/typeahead/typeahead.component.scss
+++ b/src/app/components/typeahead/typeahead.component.scss
@@ -4,7 +4,7 @@
   position: relative;
 }
 
-.search {
+.typeahead {
   @include border-radius();
   @include border();
   @include flex($align: center, $gsb: 1 0 auto);
@@ -18,14 +18,14 @@
   }
 }
 
-.search__icon {
+.typeahead__icon {
   @include flex(row, center, center);
   @include transition(opacity);
   margin-left: $spacing-3x;
   opacity: 0.5;
 }
 
-.search__input {
+.typeahead__input {
   @include font(inherit, primary, regular, medium, regular);
   @include placeholder() {
     color: color(placeholder);
@@ -38,45 +38,6 @@
   &:active {
     outline: none;
   }
-}
-
-.typeahead {
-  @include border-radius();
-  position: absolute;
-  top: 100%;
-  left: 0;
-  width: 100%;
-  max-height: 160px;
-  margin: 0;
-  padding: 0;
-  list-style-type: none;
-  background-color: white;
-  box-shadow: $box-shadow-x 6px 6px $box-shadow-color;
-  overflow-y: auto;
-  z-index: 1;
-  cursor: pointer;
-
-  /* Hide scrollbar for IE, Edge and Firefox */
-  -ms-overflow-style: none;
-  scrollbar-width: none;
-
-  /* Hide scrollbar for Chrome, Safari and Opera */
-  &::-webkit-scrollbar {
-    display: none;
-  }
-}
-
-.typeahead-item {
-  @include transition(background-color);
-
-  &:hover {
-    background-color: color(background);
-  }
-}
-
-.typeahead-item__value {
-  @include truncate();
-  padding: $spacing-3x $spacing-4x;
 }
 
 .svg-icon-spinner {
