07: Implement routing and Weather page

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,66 +1,1 @@
-<section class="search">
-  <div class="search__weather-image">
-    <svg-icon key="sun" size="lg"></svg-icon>
-    <svg-icon key="cloud" fontSize="40px"></svg-icon>
-  </div>
-
-  <div class="search__weather-data">
-    <zivv-select
-      [(ngModel)]="country"
-      [items]="(countries$ | async) || []"
-      [itemTemplate]="countryTemplate"
-      (itemSelect)="onCountrySelect($event)"
-      class="search__dropdown"
-    ></zivv-select>
-
-    <zivv-typeahead
-      [(ngModel)]="city"
-      [(search)]="search"
-      [items]="cities$ | async | search: search:'fullName'"
-      [itemTemplate]="cityTemplate"
-      [isLoading]="(isLoading$ | async) || false"
-      (itemSelect)="onCitySelect($event)"
-      placeholder="Please enter your location ..."
-      labelKey="fullName"
-      class="search__typeahead"
-    ></zivv-typeahead>
-  </div>
-</section>
-
-<main *ngIf="weeklyForecast$ | async as weeklyForecast">
-  <section class="result">
-    <article class="weather">
-      <h1 class="weather__name">{{ weeklyForecast | fn: mapToDateRange | daterange }}</h1>
-      <p class="weather__value weather__value--large">
-        <span>{{ averageTemp$ | async | number: '1.0-0' }}</span>
-        <i class="weather__unit">&#8451;</i>
-      </p>
-    </article>
-  </section>
-
-  <section class="days">
-    <article *ngFor="let weather of weeklyForecast; let i = index" class="weather" id="weather{{ i + 1 }}">
-      <h3 class="weather__name">{{ weather.date | date: 'EEEE' }}</h3>
-      <p class="weather__value">
-        <span>{{ weather.temperature | number: '1.0-0' }}</span>
-        <i class="weather__unit">&#8451;</i>
-      </p>
-    </article>
-  </section>
-</main>
-
-<!-- Template with Country data for custom 'select' component -->
-<ng-template #countryTemplate let-context>
-  <article class="item item--country">
-    <img *ngIf="context?.flag" [src]="context.flag" [alt]="context.code" class="item__flag" />
-    <span class="item__text item--text--country">{{ context?.code || '--' }}</span>
-  </article>
-</ng-template>
-
-<!-- Template with City data for custom 'typeahead' component -->
-<ng-template #cityTemplate let-context>
-  <article class="item">
-    <img *ngIf="context?.flag" [src]="context.flag" [alt]="context.country_code" class="item__flag" />
-    <span class="item__text">{{ context?.fullName }}</span>
-  </article>
-</ng-template>
+<router-outlet></router-outlet>
