07: Display loading indicator while waiting for HTTP response

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -18,6 +18,7 @@
       [(search)]="search"
       [items]="cities$ | async | search: search:'fullName'"
       [itemTemplate]="cityTemplate"
+      [isLoading]="(isLoading$ | async) || false"
       (itemSelect)="onCitySelect($event)"
       placeholder="Please enter your location ..."
       labelKey="fullName"
