--- a/src/app/components/typeahead/typeahead.component.html
+++ b/src/app/components/typeahead/typeahead.component.html
@@ -18,7 +18,7 @@
     (itemSelect)="onItemSelect($event)"
   ></zivv-dropdown>
 
-  <svg-icon [key]="isLoading ? 'spinner' : 'search'" size="lg" color="hotpink" class="typeahead__icon"></svg-icon>
+  <svg-icon [key]="isLoading ? 'spinner' : 'search'" size="lg" class="typeahead__icon"></svg-icon>
 </section>
 
 <ng-template #defaultTemplate let-context>
