09: Minor bugs fixes

--- a/src/app/components/typeahead/typeahead.component.scss
+++ b/src/app/components/typeahead/typeahead.component.scss
@@ -16,6 +16,10 @@
   &:focus-within {
     border-color: color(focus);
   }
+
+  &:focus-within .typeahead__icon {
+    opacity: 1;
+  }
 }
 
 .typeahead__icon {
