--- a/src/app/components/typeahead/typeahead.component.html
+++ b/src/app/components/typeahead/typeahead.component.html
@@ -1,25 +1,25 @@
-<section (click)="toggleOpen(true)" (zivvOutsideClick)="toggleOpen(false)" class="typeahead">
+<label (click)="toggleOpen(true)" (zivvOutsideClick)="toggleOpen(false)" class="typeahead">
   <input
     [(ngModel)]="search"
     [placeholder]="placeholder"
     (ngModelChange)="searchChange.emit($event)"
+    (focus)="toggleOpen(true)"
     autocomplete="off"
     type="search"
     name="search"
     id="search"
     class="typeahead__input"
   />
-
-  <zivv-dropdown
-    *ngIf="isOpen"
-    [items]="items"
-    [itemTemplate]="itemTemplate || defaultTemplate"
-    [rowHeight]="45"
-    (itemSelect)="onItemSelect($event)"
-  ></zivv-dropdown>
-
   <svg-icon [key]="isLoading ? 'spinner' : 'search'" size="lg" class="typeahead__icon"></svg-icon>
-</section>
+</label>
+
+<zivv-dropdown
+  *ngIf="isOpen"
+  [items]="items"
+  [itemTemplate]="itemTemplate || defaultTemplate"
+  [rowHeight]="45"
+  (itemSelect)="onItemSelect($event)"
+></zivv-dropdown>
 
 <ng-template #defaultTemplate let-context>
   <span class="truncate-text">{{ labelKey ? context[labelKey] : context }}</span>
