--- a/src/app/components/weather/weather.component.html
+++ b/src/app/components/weather/weather.component.html
@@ -1,4 +1,4 @@
-<main *ngIf="weeklyForecast$ | async as weeklyForecast" @expandCollapse>
+<div *ngIf="weeklyForecast$ | async as weeklyForecast" @expandCollapse>
   <section class="result">
     <article class="weather">
       <h1 class="weather__name">{{ weeklyForecast | fn: mapToDateRange | daterange }}</h1>
@@ -18,4 +18,4 @@
       </p>
     </article>
   </section>
-</main>
+</div>
