--- a/src/styles.scss
+++ b/src/styles.scss
@@ -38,20 +38,6 @@ body {
   height: 100vh;
   margin: 0;
   overflow: hidden;
-  background: linear-gradient(
-    119.25deg,
-    gradient-color(1) -11.47%,
-    gradient-color(2) 3.95%,
-    gradient-color(3) 19.37%,
-    gradient-color(4) 34.78%,
-    gradient-color(5) 50.19%,
-    gradient-color(6) 65.61%,
-    gradient-color(7) 81.02%,
-    gradient-color(8) 96.44%,
-    gradient-color(9) 111.85%
-  );
-  background-attachment: fixed;
-  background-repeat: no-repeat;
 
   // for Google Fonts
   -webkit-font-smoothing: antialiased;
@@ -66,7 +52,23 @@ input[type='search']::-webkit-search-results-decoration {
 }
 
 main {
-  width: 100%;
+  @include transition(background-image);
+  height: 100%;
+  background-image: linear-gradient(0deg, rgba(color(secondary), 0.8), rgba(color(secondary), 0.8)),
+    linear-gradient(
+      119.25deg,
+      gradient-color(1) -11.47%,
+      gradient-color(2) 3.95%,
+      gradient-color(3) 19.37%,
+      gradient-color(4) 34.78%,
+      gradient-color(5) 50.19%,
+      gradient-color(6) 65.61%,
+      gradient-color(7) 81.02%,
+      gradient-color(8) 96.44%,
+      gradient-color(9) 111.85%
+    );
+  background-attachment: fixed;
+  background-repeat: no-repeat;
 }
 
 .truncate-text {
