dev: Input label fix

--- a/src/app/components/typeahead/typeahead.component.html
+++ b/src/app/components/typeahead/typeahead.component.html
@@ -1,4 +1,4 @@
-<label (click)="toggleOpen(true)" (zivvOutsideClick)="toggleOpen(false)" class="typeahead">
+<label (click)="toggleOpen(true)" (zivvOutsideClick)="toggleOpen(false)" class="typeahead" for="search">
   <input
     [(ngModel)]="search"
     [placeholder]="placeholder"
